--- a/conf.d/minion.manuelcarrizo.com.conf
+++ b/conf.d/minion.manuelcarrizo.com.conf
@@ -4,7 +4,7 @@ server {
     server_name minion.manuelcarrizo.com;
 
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://172.17.0.1:8000
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
