--- a/conf.d/nubo.manuelcarrizo.com.conf
+++ b/conf.d/nubo.manuelcarrizo.com.conf
@@ -4,6 +4,10 @@ server {
     server_name nubo.manuelcarrizo.com;
 
     location / {
+        if ($http_x_forwarded_proto != "https") {
+          return 301 https://$server_name$request_uri;
+        }
+
         proxy_pass http://172.17.0.1:8001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
