--- a/conf.d/nubo.manuelcarrizo.com.conf
+++ b/conf.d/nubo.manuelcarrizo.com.conf
@@ -9,6 +9,9 @@ server {
         }
 
         proxy_pass http://172.17.0.1:8001;
+        proxy_set_header   Host             $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
