--- a/conf.d/minion.manuelcarrizo.com.conf
+++ b/conf.d/minion.manuelcarrizo.com.conf
@@ -4,14 +4,11 @@ server {
     server_name minion.manuelcarrizo.com;
 
     location / {
-        if ($http_x_forwarded_proto != "https") {
+        if ($scheme != "https") {
           return 301 https://$server_name$request_uri;
         }
 
         proxy_pass http://172.17.0.1:8000;
-        proxy_set_header   Host             $host;
-        proxy_set_header   X-Real-IP        $remote_addr;
-        proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
